--- a/src/main/webapp/webs/FormRegistrarUsuario.html
+++ b/src/main/webapp/webs/FormRegistrarUsuario.html
@@ -157,7 +157,7 @@
 <body>
   <section>
     <div class="header">
-      <img src="ImagenesInicio/logoRegistro.jpg" alt="logo">
+      <img src="../imgs/logoRegistro.jpg" alt="logo">
       <h1 style="color: black;">REGISTRAR USUARIO</h1>
     </div>
 
@@ -224,7 +224,7 @@
   </section>
 
 <section>
-  <img src="ImagenesInicio/RegistrarUsuarioImg.jpg" alt="Imagen">
+  <img src="../imgs/RegistrarUsuarioImg.jpg" alt="Imagen">
 </section>
 
 </body>
