--- a/src/main/webapp/webs/PrincipalMenu.html
+++ b/src/main/webapp/webs/PrincipalMenu.html
@@ -84,7 +84,7 @@
 <body>
   <div class="header">
     <h1>
-      <img src="ImagenesInicio/logo.jpg" alt="logo">
+      <img src="../imgs/logo.jpg" alt="logo">
       <span style="font-family: Arial, sans-serif;">EventosYa</span>
     </h1>
     <ul>
@@ -95,8 +95,8 @@
     </ul>
   </div>
   <div class="image-container">
-    <img src="ImagenesInicio/inicio1.jpg" alt="inicio1">
-    <img src="ImagenesInicio/inicio2.jpg" alt="inicio2">
+    <img src="../imgs/inicio1.jpg" alt="inicio1">
+    <img src="../imgs/inicio2.jpg" alt="inicio2">
   </div>
 </body>
 </html>
