--- a/src/main/webapp/comun/aside.html
+++ b/src/main/webapp/comun/aside.html
@@ -38,25 +38,21 @@
         transition: 1s all;
         color: #262525;
     }
-    .aside-item-active{
-        background-color: rgb(158, 158, 158);
-        color: #262525;
-    }
 
 
 
 </style>
 <aside class="pag-aside">
-	 <div class="aside-item aside-item-active">
+	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Menu.jsp" class="aside-item" id="itemMenu">
 	     <img src="${pageContext.request.contextPath}/imgs/asideMenu.png" alt="">
 	     <h2>Menu</h2>
-	 </div>
-	 <div class="aside-item ">
+	 </a>
+	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_AdminEventos.jsp" class="aside-item " id="itemAdminEventos">
 	     <img src="${pageContext.request.contextPath}/imgs/asideAdminEventos.png" alt="">
 	     <h2>Administrar<br>Eventos</h2>
-	 </div>
-	 <div class="aside-item ">
+	 </a>
+	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Config_Perfil.jsp"  class="aside-item  " id="itemConfig">
 	     <img src="${pageContext.request.contextPath}/imgs/asideConfig.png" alt="">
 	     <h2>Configuracion<br>de Cuenta</h2>
-	 </div>
+	 </a>
 </aside>
