arreglo de css , se repetian comandos css en un mismo jsp

--- a/src/main/webapp/comun/aside_configuracion.html
+++ b/src/main/webapp/comun/aside_configuracion.html
@@ -40,6 +40,6 @@
 	     	<h2>Editar Perfil</h2>
 	    </a>
 	    <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Config_Contra.jsp"  class="aside-item2 Con_aside-item ">
-	    	<h2>Modificar <br>Contraseña</h2>
+	    	<h2>Modificar <br>Contrasenia</h2>
 	    </a>
 	</div>
