Avance # nose jiij funciona el asistencia

--- a/src/main/webapp/comun/aside.html
+++ b/src/main/webapp/comun/aside.html
@@ -43,15 +43,15 @@
 
 </style>
 <aside class="pag-aside">
-	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Menu.jsp" class="aside-item" id="itemMenu">
+	 <a href="${pageContext.request.contextPath}/usuario?opcion=link&val=irMenu" class="aside-item" id="itemMenu">
 	     <img src="${pageContext.request.contextPath}/imgs/asideMenu.png" alt="">
 	     <h2>Menu</h2>
 	 </a>
-	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_AdminEventos.jsp" class="aside-item " id="itemAdminEventos">
+	 <a href="${pageContext.request.contextPath}/usuario?opcion=link&val=irEdit" class="aside-item " id="itemAdminEventos">
 	     <img src="${pageContext.request.contextPath}/imgs/asideAdminEventos.png" alt="">
 	     <h2>Administrar<br>Eventos</h2>
 	 </a>
-	 <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Config_Perfil.jsp"  class="aside-item  " id="itemConfig">
+	 <a href="${pageContext.request.contextPath}/usuario?opcion=link&val=irConfig"  class="aside-item  " id="itemConfig">
 	     <img src="${pageContext.request.contextPath}/imgs/asideConfig.png" alt="">
 	     <h2>Configuracion<br>de Cuenta</h2>
 	 </a>
