--- a/src/main/webapp/comun/aside_configuracion.html
+++ b/src/main/webapp/comun/aside_configuracion.html
@@ -36,10 +36,10 @@
     }
 </style>
 	<div class="aside_pa">
-	    <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Config_Perfil.jsp" class="aside-item1 Con_aside-item">
+	    <a href="${pageContext.request.contextPath}/usuario?opcion=link&val=irConfig" class="aside-item1 Con_aside-item">
 	     	<h2>Editar Perfil</h2>
 	    </a>
-	    <a href="${pageContext.request.contextPath}/webs/MenuUsuario_Config_Contra.jsp"  class="aside-item2 Con_aside-item ">
+	    <a href="${pageContext.request.contextPath}/usuario?opcion=link&val=irConfigContra"  class="aside-item2 Con_aside-item ">
 	    	<h2>Modificar <br>Contrasenia</h2>
 	    </a>
 	</div>
